--- a/css/styles.css
+++ b/css/styles.css
@@ -10152,8 +10152,11 @@ header.masthead h1 {
 
 .card {
   background-color: white;
-  padding: 20px;
-  margin-top: 20px;
+  padding: 35px;
+  margin-top: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .row:after {
@@ -10173,4 +10176,44 @@ header.masthead h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: solid #85C1E9 3px;
+  padding: 3px;
 }
+
+.title-size {
+  font-size: 4rem !important;
+}
+
+.fade-in-title {
+  animation: fadeIn ease 2.5s;
+}
+
+.fade-in-card {
+  animation: fadeIn ease 2.5s;
+}
+
+.fade-in-img {
+  animation: fadeIn ease 6s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+/*.left-image {*/
+/*  float: left;*/
+/*  clear: left;*/
+/*  margin-right: 35px;*/
+/*  border: solid #85C1E9 3px;*/
+/*  padding: 3px;*/
+/*}*/
+
+.blue-font {
+  color: #85C1E9;
+}
+
